--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
-{ 
+{
   "homepage": "http://ARochniak.github.io/React-Calculator",
   "name": "practise",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "^24.0.20",
+    "@types/node": "^12.11.7",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
+    "@types/react-redux": "^7.1.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
